@@ -1,3 +1,8 @@
+2002-04-05  Daniel Steffen <das@users.sourceforge.net>
+
+	* mac/tclMacPkgConfig.c: Added Mac implementation of pkgconfig.
+	* tests/config.test: fixed failing tests.
+
 2002-02-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tests/config.test: Added a testsuite for pkgconfig.
